Fixed issue where footer would obscure body content on small viewports

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -3,9 +3,15 @@
 
 .main-app {
   width: 100%;
+  main {
+    height: 100vh;
+  }
   footer.main-footer {
-    position: fixed;
-    bottom: 0;
+    height: 10rem;
+    padding: 0;
+    p {
+      line-height: 10rem;
+    }
   }
 }
 
